# embedded_rust_test

./: Cargo.toml  openocd.gdb
.cargo/: config.toml
src/: main.rs
src/utilities/: logger.rs  mod.rs
